contour/contour_IngressClass_contour.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  annotations:
    ingressclass.kubernetes.io/is-default-class: 'true'
  labels:
    app.kubernetes.io/component: contour
    app.kubernetes.io/instance: contour
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: contour
    app.kubernetes.io/version: 1.28.3
    helm.sh/chart: contour-17.0.7
  name: contour
spec:
  controller: projectcontour.io/contour/contour-contour
