contour/contour-envoy-metrics_Service_contour.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: envoy
    app.kubernetes.io/instance: contour
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: contour
    app.kubernetes.io/version: 1.32.0
    helm.sh/chart: contour-21.0.12
  name: contour-envoy-metrics
  namespace: contour
spec:
  clusterIP: None
  ports:
  - name: metrics
    port: 8002
    protocol: TCP
    targetPort: metrics
  selector:
    app.kubernetes.io/component: envoy
    app.kubernetes.io/instance: contour
    app.kubernetes.io/name: contour
  type: ClusterIP
