contour/contour-envoy_Service_contour.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/loadBalancerIPs: 169.229.226.81,2607:f140:8801::1:81
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
  labels:
    app.kubernetes.io/component: envoy
    app.kubernetes.io/instance: contour
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: contour
    app.kubernetes.io/version: 1.34.4
    helm.sh/chart: contour-21.0.12
  name: contour-envoy
  namespace: contour
spec:
  externalTrafficPolicy: Local
  ipFamilyPolicy: PreferDualStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  - name: https
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    app.kubernetes.io/component: envoy
    app.kubernetes.io/instance: contour
    app.kubernetes.io/name: contour
  sessionAffinity: None
  type: LoadBalancer
