contour/contour_Service_contour.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: contour
    app.kubernetes.io/instance: contour
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: contour
    app.kubernetes.io/version: 1.28.1
    helm.sh/chart: contour-17.0.0
  name: contour
  namespace: contour
spec:
  ports:
  - name: tcp-xds
    nodePort: null
    port: 8001
    protocol: TCP
    targetPort: xds
  selector:
    app.kubernetes.io/component: contour
    app.kubernetes.io/instance: contour
    app.kubernetes.io/name: contour
  sessionAffinity: None
  type: ClusterIP
