contour/contour-contour_NetworkPolicy_contour.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: contour
    app.kubernetes.io/instance: contour
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: contour
    app.kubernetes.io/version: 1.32.0
    helm.sh/chart: contour-21.0.12
  name: contour-contour
  namespace: contour
spec:
  egress:
  - {}
  ingress:
  - ports:
    - port: 8001
    - port: 8000
  podSelector:
    matchLabels:
      app.kubernetes.io/component: contour
      app.kubernetes.io/instance: contour
      app.kubernetes.io/name: contour
  policyTypes:
  - Ingress
  - Egress
