contour/contour-envoy_NetworkPolicy_contour.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: envoy
    app.kubernetes.io/instance: contour
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: contour
    app.kubernetes.io/version: 1.28.3
    helm.sh/chart: contour-17.0.7
  name: contour-envoy
  namespace: contour
spec:
  egress:
  - {}
  ingress:
  - ports:
    - port: 8080
    - port: 8443
    - port: 8002
  podSelector:
    matchLabels:
      app.kubernetes.io/component: envoy
      app.kubernetes.io/instance: contour
      app.kubernetes.io/name: contour
  policyTypes:
  - Ingress
  - Egress
